# lean-claude

./: .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  ELAB_RULES_IMPLEMENTATION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  PARSER_PROGRESS.md  PROGRESS.md  PROGRESS_FINAL.md  README.md  SESSION_PROGRESS.md  clippy.toml  fix_all_syntax_constructors.py  fix_boxed_syntax.py  fix_syntax_constructors.py  fix_test_constructors.py  rustc-ice-2025-07-12T04_43_09-164995.txt  rustc-ice-2025-07-12T04_43_14-165029.txt  rustc-ice-2025-07-12T04_43_39-165060.txt  rustc-ice-2025-07-12T04_44_26-165586.txt  rustc-ice-2025-07-12T05_04_51-167084.txt  rustc-ice-2025-07-12T05_05_41-167169.txt  rustc-ice-2025-07-12T05_06_09-167226.txt  rustc-ice-2025-07-12T05_54_40-170348.txt  rustc-ice-2025-07-12T06_01_33-172694.txt  rustc-ice-2025-07-12T06_01_39-172726.txt  rustc-ice-2025-07-12T06_02_52-173893.txt  rustc-ice-2025-07-12T06_33_44-174462.txt  rustc-ice-2025-07-12T06_33_50-174496.txt  rustc-ice-2025-07-12T06_35_34-174636.txt  rustc-ice-2025-07-12T17_33_30-187662.txt  rustc-ice-2025-07-12T17_57_47-188676.txt  rustc-ice-2025-07-12T17_58_02-188710.txt  rustc-ice-2025-07-12T17_58_27-188741.txt  (+15 more)
.githooks/: README.md  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  editors.yml  lean-analyzer-tests.yml  lean-compatibility.yml  release.yml
apps/leanc-rs/: Cargo.toml
apps/leanc-rs/src/: main.rs
crates/apps/lean-analyzer/: Cargo.toml
crates/apps/lean-analyzer/benches/: analyzer_benchmarks.rs
crates/apps/lean-analyzer/benches.disabled/: analyzer_benchmarks.rs
crates/apps/lean-analyzer/src/: analysis.rs  code_actions.rs  diagnostics.rs  error_reporting.rs  file_system.rs  formatting.rs  inlay_hints.rs  lib.rs  lsp.rs  main.rs  project.rs  semantic_highlighting.rs  symbol_index.rs  workspace.rs
crates/apps/lean-analyzer/tests/: error_messages.rs  import_namespace_tests.rs  lsp_integration.rs  performance_tests.rs  test_config.rs  test_plan.md
crates/lean-abstractions/lean-eterned/: Cargo.toml
crates/lean-abstractions/lean-eterned/src/: lib.rs
crates/lean-driver/: Cargo.toml
crates/lean-elaborator/: Cargo.toml
crates/lean-elaborator/src/: lib.rs
crates/lean-ir/: Cargo.toml
crates/lean-kernel/: Cargo.toml
crates/lean-kernel/src/: environment.rs  expr.rs  name.rs
crates/lean-parser/: Cargo.toml
crates/lean-parser/src/: combinators.rs  error.rs  input.rs  parser.rs
crates/lean-syntax/: Cargo.toml
crates/lean-syntax/src/: lib.rs
crates/semantics/lean-elaborator/: Cargo.toml
crates/semantics/lean-elaborator/src/: command.rs  context.rs  elab.rs  elab_rules.rs  environment_ext.rs  error.rs  inductive.rs  instances.rs  lib.rs  metavar.rs  module_loader.rs  module_loader_test.rs  namespace.rs  patterns.rs  tactics.rs  typeck.rs  universe.rs
crates/semantics/lean-elaborator/tests/: elab_rules_test.rs
crates/semantics/lean-kernel/: Cargo.toml
crates/semantics/lean-kernel/src/: environment.rs  expr.rs  level.rs  lib.rs  module.rs  name.rs
crates/semantics/lean-kernel/src/expr/: tests.rs
crates/semantics/lean-kernel/src/level/: tests.rs
crates/semantics/lean-kernel/src/name/: tests.rs
crates/semantics/lean-macro-expander/: Cargo.toml  LIMITATIONS.md
crates/semantics/lean-macro-expander/src/: environment.rs  error.rs  expander.rs  hygiene.rs  lib.rs  pattern.rs  tests.rs
crates/semantics/lean-macro-expander/tests/: advanced_macro_test.rs  builtin_macros_test.rs  comprehensive_macro_test.rs  debug_parsing.rs  integration_test.rs  lean4_macros_test.rs  macro_hygiene_test.rs  macro_rules_test.rs  multiple_params_test.rs  splice_expansion_test.rs  splice_matching_test.rs  splice_test.rs
crates/syntax/lean-parser/: Cargo.toml
crates/syntax/lean-parser/src/: attribute.rs  category.rs  combinators.rs  command.rs  custom_syntax.rs  diagnostic.rs  error.rs  expansion.rs  implicits.rs  input.rs  lexical.rs  lib.rs  macro.rs  mathlib_tactics.rs  module.rs  notation.rs  parser.rs  pattern.rs  precedence.rs  recovery.rs  scoped_notation.rs  tactic.rs  tactic_combinators.rs  term.rs  tests.rs  trivia_tests.rs  universe.rs
crates/syntax/lean-parser/src/tests/: category_comprehensive_test.rs  category_integration_test.rs  category_test.rs  do_bind_test.rs  elab_rules_test.rs  macro_test.rs  module_tests.rs  operator_category_test.rs  pattern_operator_test.rs  tactic_category_test.rs  unicode_test.rs  unit_syntax_test.rs
crates/syntax/lean-parser/tests/: debug_macro_rules.rs  debug_macro_rules_match.rs  expansion_test.rs  literals_test.rs  macro_parsing_test.rs  method_call_test.rs  operator_tests.rs  parser_tests.rs  pattern_tests.rs  simple_def_test.rs  simple_macro_rules.rs  tactic_tests.rs  test_macro_rules_parsing.rs  test_macro_rules_parsing2.rs  test_macro_string_pattern.rs  test_splice_parsing.rs  universe_integration_test.rs
crates/syntax/lean-syn-expr/: Cargo.toml
crates/syntax/lean-syn-expr/src/: lib.rs  tests.rs
crates/tests/integration-tests/: Cargo.toml
crates/tests/integration-tests/src/: lib.rs
crates/tests/integration-tests/tests/: error_analysis_test.rs  lean_file_parsing_test.rs
crates/utils/lean-driver/: Cargo.toml
crates/utils/lean-driver/src/: lib.rs
design/: lean4-performance-analysis.md  rust-implementation-advantages.md
editors/: README.md
editors/nvim/: README.md
editors/vim/: README.md
editors/vscode/: .eslintrc.json  README.md  language-configuration.json  package-lock.json  package.json
scripts/: setup-dev.sh  setup-hooks.sh
test-data/implemented-features/: README.md  STATUS.md  Semantics.lean  Syntax.lean  lake-manifest.json  lakefile.lean
tests/: clippy.toml  debug_commands.rs  debug_parse_sequence.rs  test_abbrev_simple.rs  test_deriving.rs  test_module_parsing.rs  test_mutual.rs
tests/integration/: basic_metaprogramming_test.rs  calc_conv_test.rs  complex_expr_test.rs  custom_syntax_test.rs  def_test.rs  elaborator_test.rs  error_recovery_test.rs  error_test.rs  fixed_tactic_test.rs  implicit_args_test.rs  instance_synthesis_test.rs  (+16 more)
(+129 files in other folders)
