[workspace]
resolver = "2"
members = [
    "crates/abstractions/eterned",
    "crates/abstractions/eterned/eterned-macros",
    "crates/syntax/lean-parser",
    "crates/syntax/lean-syn-expr",
    "crates/semantics/lean-kernel",
    "crates/semantics/lean-elaborator",
    "crates/semantics/lean-meta",
    "crates/semantics/lean-macro-expander",
    "crates/mir/lean-ir",
    "crates/mir/lean-codegen",
    "crates/utils/lean-driver",
    "crates/tests/integration-tests",
    "apps/leanc-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["lean-claude contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xiyuzhai/lean-claude"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
dashmap = "6.0"
smallvec = "1.13"
indexmap = "2.2"

# Parsing
rowan = "0.15"
logos = "0.14"
nom = "7.1"

# Testing
expect-test = "1.5"
proptest = "1.4"
criterion = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# String interning (following visored pattern)
lazy_static = "1.4"
sha2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

