[package]
name = "lean-elaborator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lean-eterned = { path = "../lean-abstractions/lean-eterned" }
lean-syntax = { path = "../lean-syntax" }
lean-kernel = { path = "../lean-kernel" }

thiserror = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }