[package]
name = "lean-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lean-eterned = { path = "../lean-abstractions/lean-eterned" }

smallvec = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }