[package]
name = "lean-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core analyzer dependencies
lean-parser = { path = "../../syntax/lean-parser" }
lean-syn-expr = { path = "../../syntax/lean-syn-expr" }
lean-kernel = { path = "../../semantics/lean-kernel" }
lean-elaborator = { path = "../../semantics/lean-elaborator" }
lean-meta = { path = "../../semantics/lean-meta" }

# LSP protocol support
lsp-types = "0.94"
lsp-server = "0.7"
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-service = "0.3"
futures = "0.3"

# Data structures
dashmap.workspace = true
indexmap.workspace = true
smallvec.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
parking_lot.workspace = true

# File system
notify = "6.1"
walkdir = "2.4"

# String utilities
ropey = "1.6"

[dev-dependencies]
expect-test.workspace = true
tempfile = "3.8"
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = "0.5"
insta = "1.34"

[[bin]]
name = "lean-analyzer"
path = "src/main.rs"

# [[bench]]
# name = "analyzer_benchmarks"
# harness = false