[package]
name = "lean-eterned"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
once_cell = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }