[package]
name = "lean-elaborator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eterned = { path = "../../abstractions/eterned" }
lean-syn-expr = { path = "../../syntax/lean-syn-expr" }
lean-kernel = { path = "../lean-kernel" }
lean-parser = { path = "../../syntax/lean-parser" }

thiserror = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }