[package]
name = "lean-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eterned = { path = "../../abstractions/eterned" }
lean-syn-expr = { path = "../../syntax/lean-syn-expr" }

thiserror = { workspace = true }
smallvec = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }