[package]
name = "lean-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eterned = { path = "../../abstractions/eterned" }
lean-syn-expr = { path = "../lean-syn-expr" }

thiserror = { workspace = true }
smallvec = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
proptest = { workspace = true }