[package]
name = "lean-syn-expr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eterned = { path = "../../abstractions/eterned" }

smallvec = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }