[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "mathlib4_parser_test"
path = "../../../tests/integration/mathlib4_parser_test.rs"

[[test]]
name = "parser_integration_test"
path = "../../../tests/integration/parser_integration_test.rs"

[[test]]
name = "syntax_test_suite"
path = "../../../tests/integration/syntax_test_suite.rs"

[[test]]
name = "error_recovery_test"
path = "../../../tests/integration/error_recovery_test.rs"

[[test]]
name = "custom_syntax_test"
path = "../../../tests/integration/custom_syntax_test.rs"

[[test]]
name = "projection_test"
path = "../../../tests/integration/projection_test.rs"

[[test]]
name = "elaborator_test"
path = "../../../tests/integration/elaborator_test.rs"

[[test]]
name = "typeck_test"
path = "../../../tests/integration/typeck_test.rs"

[[test]]
name = "type_definitions_test"
path = "../../../tests/integration/type_definitions_test.rs"

[[test]]
name = "debug_commands"
path = "../../../tests/debug_commands.rs"

[[test]]
name = "debug_parse_sequence"
path = "../../../tests/debug_parse_sequence.rs"

[[test]]
name = "test_abbrev_simple"
path = "../../../tests/test_abbrev_simple.rs"

[[test]]
name = "test_mutual"
path = "../../../tests/test_mutual.rs"

[[test]]
name = "test_deriving"
path = "../../../tests/test_deriving.rs"

[[test]]
name = "calc_conv_test"
path = "../../../tests/integration/calc_conv_test.rs"

[[test]]
name = "metaprogramming_test"
path = "../../../tests/integration/metaprogramming_test.rs"

[[test]]
name = "basic_metaprogramming_test"
path = "../../../tests/integration/basic_metaprogramming_test.rs"

[[test]]
name = "mathlib4_constructs_test"
path = "../../../tests/integration/mathlib4_constructs_test.rs"

[dependencies]
lean-parser = { path = "../../syntax/lean-parser" }
lean-syn-expr = { path = "../../syntax/lean-syn-expr" }
lean-kernel = { path = "../../semantics/lean-kernel" }
lean-elaborator = { path = "../../semantics/lean-elaborator" }